# bnetd

./: CHANGELOG  CREDITS  INSTALL  README  TODO
conf/: ad.list  autoupdate  bnbitsmotd.txt  bnbitspasswd  bnetd.conf.in  bnetd.conf.win32  bnetd_default_user  bnhelp  bnissue.txt  bnmotd.txt  channel.list  d2cs.conf.in  d2dbs.conf.in  gametrans  news.txt  realm.list  versioncheck
docs/: CHANGES_BNIUTILS  CHANGE_BUCKY  CHANGE_VAP  FAQ.html  README.BORLAND  README.adbanner  README.bits  README.bni  README.debugging  README.diablo108  README.ladder  README.registry  README.storage  TODO.Sherpya  TODO_BUCKY  TODO_VAP  bniheader.txt
files/: ad000001.pcx  icons.bni  tos_USA.txt
packaging/: README.packaging
packaging/Mandrake/8.0/: bnetd-0.4-diffs  bnetd-0.4.24-diffs  bnetd-0.4.25pre1-diffs  bnetd-0.4.25pre2-diffs  bnetd-0.4.25pre3-diffs  bnetd-snapshot-diffs  bnetd.spec
scripts/: fsgs2bnetd.pl  ladder.py
src/: MSVC++.mak  Makefile.BORLAND  Makefile.in  config.h.in  config.h.win32  config.h.win32borland  config.h.win32msvc++  configure  configure.in
src/autoconf/: ansi2knr.c
src/bnetd/: .realm.c.swp  Makefile  account.c  account.h  account_wrap.c  account_wrap.h  adbanner.c  adbanner.h  autoupdate.c  autoupdate.h  bits.c  bits.h  bits_chat.c  bits_chat.h  bits_ext.c  bits_ext.h  bits_game.c  bits_game.h  bits_login.c  bits_login.h  bits_motd.c  bits_motd.h  bits_net.c  bits_net.h  bits_packet.c  bits_packet.h  bits_query.c  bits_query.h  bits_rconn.c  bits_rconn.h  bits_va.c  bits_va.h  channel.c  channel.h  character.c  character.h  command.c  command.c.orig  command.h  connection.c  (+57 more)
src/bniutils/: Makefile  bni.c  bni2tga.c  bnibuild.c  bniextract.c  bnilist.c  tga.c  tgainfo.c
src/bnpass/: Makefile  bnpass.c
src/bnpcap/: Makefile  bnpcap.c
src/bnproxy/: Makefile  bnproxy.c  virtconn.c  virtconn.h
src/bntrackd/: Makefile  bntrackd.c
src/client/: Makefile  bnbot.c  bnchat.c  bnftp.c  bnstat.c  client.c  client_connect.c  client_connect.h  udptest.c
src/common/: addr.c  addr.h  bits_protocol.h  bn_type.c  bn_type.h  bnet_protocol.h  bnethash.c  bnethash.h  bnettime.h  check_alloc.c  check_alloc.h  eventlog.c  eventlog.h  field_sizes.h  file_protocol.h  give_up_root_privileges.c  hashtable.c  hashtable.h  init_protocol.h  introtate.h  list.c  list.h  network.c  packet.c  packet.h  queue.c  queue.h  setup_before.h  tag.h  token.c  util.c  util.h  version.h
src/compat/: difftime.c  gettimeofday.c  inet_aton.c  inet_ntoa.c  memcpy.c  memmove.c  memset.c  pdir.c  psock.c  psock.h  strcasecmp.c  strdup.c  strerror.c  strftime.c  strncasecmp.c  strtoul.c  uname.c
src/d2cs/: Makefile  bnetd.c  cmdline_parse.c  conf.c  conf.h  connection.c  connection.h  d2charfile.c  d2charfile.h  d2cs_d2gs_protocol.h  d2gs.c  d2gs.h  d2ladder.c  d2ladder.h  game.c  game.h  gamequeue.c  handle_bnetd.c  handle_d2cs.c  handle_d2cs.h  handle_d2gs.c  handle_d2gs.h  handle_init.c  handle_init.h  handle_signal.c  main.c  net.c  prefs.c  prefs.h  s2s.c  server.c  serverqueue.c  setup.h  xstring.c  xstring.h
src/d2dbs/: Makefile  charlock.c  cmdline_parse.c  cmdline_parse.h  d2ladder.c  d2ladder.h  dbserver.c  dbserver.h  dbspacket.c  handle_signal.c  main.c  prefs.c  prefs.h  server.c  server.h  setup.h
src/debug/: Makefile  addrtest.c  hashtabletest.c  listtest.c  sbnetd.c  timetest.c
